# aga-ai-github-assistant

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  GitHub_File_Pusher.py  README.md  pyproject.toml  render.yaml  requirements.txt
aga-ai-github-assistant/: package-lock.json  package.json  vite.config.ts
aga-ai-github-assistant/src/: App.tsx
aga-ai-github-assistant/src/components/backgrounds/: GradientBlinds.jsx
aga-ai-github-assistant/src/components/ui/: Layout.tsx  ProtectedRoute.tsx
aga-ai-github-assistant/src/context/: AuthContext.tsx
aga-ai-github-assistant/src/lib/: api.ts
aga-ai-github-assistant/src/pages/: Analyzer.tsx  Auth.tsx  CLI.tsx  CreateRepo.tsx  Dashboard.tsx  Landing.tsx  ReadmeGen.tsx  RepoManager.tsx
aga/core/: ai_engine.py  github_client.py
aga/modules/: analyzer.py  readme_gen.py  uploader.py
aga_ai_github_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
app/: main.py
backend/: main.py
cli/: main.py
frontend/: package-lock.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: Layout.jsx  ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/lib/: api.js
frontend/src/pages/: Analyzer.jsx  Auth.jsx  CLI.jsx  CreateRepo.jsx  Dashboard.jsx  Landing.jsx  ReadmeGen.jsx  RepoManager.jsx
