[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aga-ai-github-assistant"
version = "1.3.4"
description = "AI-powered GitHub assistant with file deployment, repo analysis, and README generation."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "gradio>=4.0.0",
    "fastapi",
    "uvicorn",
    "langchain",
    "langchain-groq",
    "langchain-core",
    "PyGithub",
    "python-dotenv",
    "httpx",
    "fpdf2",
    "tabulate",
    "tenacity",
    "click",
]

[project.scripts]
aga = "cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["aga*", "app*", "cli*"]
